Thu Mar 13 00:13:41 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm (scm-error): deleted, reimplemented in C.

Mon Mar 10 15:48:31 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* boot-9.scm (process-define-module): Modified to handle both
	keywords and symbols.

Sat Mar  8 04:32:44 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* slib.scm: update read usage.

	* r4rs.scm: update primitive-load usage.
	Don't define read-sharp.

	* boot-9.scm: use read-hash-extend to install extra read syntax.
	(read-sharp): removed.
	Adjust usage of primitive-load-path, read, which no longer take
	case_i or read-sharp arguments.

Sat Mar  8 00:07:54 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* boot-9.scm: Added loading of session support module.

	* debug.scm: Removed `display-application'.  (Replaced by
 	primitive procedure.)

	* boot-9.scm (beautify-user-module!): Don't add the root module
	interface to the end of the use-list of the root module.

Thu Mar  6 07:26:34 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm: repl-quit, repl-abort: obsolete variables deleted.

Wed Mar  5 20:30:24 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm: check use-emacs-interface for emacs support.

Sun Mar  2 19:47:14 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm (scm-style-repl): call repl-report-start-timing if
	read gets EOF.
	* (exit): alias for quit.

Sun Mar  2 05:25:11 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm (error-catching-loop thunk): use a status variable to
	return the quit args.
	(scm-style-repl): call -quit, passing return value from
	error-catching-repl.  Make -quit return its args.
	stand-alone-repl: comment out, since it seems unused.

	(error-catching-loop thunk): discard trailing junk after a (quit).

Sat Mar  1 15:24:39 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* boot-9.scm: Removed the old printer code.

	* r4rs.scm (apply, call-with-current-continuation): Added comment